# gauntlet

./: .gitignore  README.md  gauntlet.sh  pyproject.toml
config/: judge.toml  metrics.toml  models.toml
prompts/: judge_v1.md
questions/2026-04/: biotech.json  general.json  investment.json
src/: __init__.py  ab_cli.py  aggregate.py  clients.py  judge.py  runner.py  schema.py
